--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -36,6 +36,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install build dependencies
+        shell: bash
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller rich click requests pyyaml
@@ -48,8 +49,8 @@ jobs:
           elif [ "${{ matrix.os }}" = "macos-latest" ]; then
             pyinstaller --onefile --name upid-darwin-arm64 upid_main.py
           elif [ "${{ matrix.arch }}" = "aarch64" ]; then
-            (sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu) || \
-            (sudo yum install -y gcc-aarch64-linux-gnu)
+            # Try apt-get, fallback to yum, but only if needed
+            (sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu) || true
             pyinstaller --onefile --name upid-linux-arm64 upid_main.py
           else
             pyinstaller --onefile --name upid-linux-x86_64 upid_main.py
@@ -71,4 +72,4 @@ jobs:
           files: |
             dist/${{ matrix.artifact }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use your PAT secret here
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
