--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -8,68 +8,64 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            arch: x86_64
-            artifact: upid-linux-x86_64
-          - os: ubuntu-latest
-            arch: aarch64
-            artifact: upid-linux-arm64
-          - os: macos-latest
-            arch: arm64
-            artifact: upid-darwin-arm64
-          - os: windows-latest
-            arch: x86_64
-            artifact: upid-windows-x86_64.exe
-
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install build dependencies
-        shell: bash
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install pyinstaller rich click requests pyyaml
-
-      - name: Build binary
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            pyinstaller --onefile --name upid-windows-x86_64 upid_main.py
-          elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            pyinstaller --onefile --name upid-darwin-arm64 upid_main.py
-          elif [ "${{ matrix.arch }}" = "aarch64" ]; then
-            # Try apt-get, fallback to yum, but only if needed
-            (sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu) || true
-            pyinstaller --onefile --name upid-linux-arm64 upid_main.py
-          else
-            pyinstaller --onefile --name upid-linux-x86_64 upid_main.py
-          fi
-
-      - name: Test binary
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            ./dist/upid-windows-x86_64.exe --help
-          else
-            chmod +x ./dist/${{ matrix.artifact }}
-            ./dist/${{ matrix.artifact }} --help
-          fi
-
-      - name: Upload binary to release
-        uses: softprops/action-gh-release@v2
+      - run: |
+          pyinstaller --onefile --name upid-linux-x86_64 upid_main.py
+      - run: |
+          chmod +x ./dist/upid-linux-x86_64
+          ./dist/upid-linux-x86_64 --help
+      - uses: softprops/action-gh-release@v2
         with:
-          files: |
-            dist/${{ matrix.artifact }}
+          files: dist/upid-linux-x86_64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller rich click requests pyyaml
+      - run: |
+          pyinstaller --onefile --name upid-darwin-arm64 upid_main.py
+      - run: |
+          chmod +x ./dist/upid-darwin-arm64
+          ./dist/upid-darwin-arm64 --help
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/upid-darwin-arm64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller rich click requests pyyaml
+      - run: |
+          pyinstaller --onefile --name upid-windows-x86_64 upid_main.py
+      - run: |
+          ./dist/upid-windows-x86_64.exe --help
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/upid-windows-x86_64.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
