--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -12,60 +12,112 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install pyinstaller rich click requests pyyaml
-      - run: |
+
+      - name: Build Linux binary
+        run: |
           pyinstaller --onefile --name upid-linux-x86_64 upid_main.py
-      - run: |
+
+      - name: Test Linux binary
+        run: |
           chmod +x ./dist/upid-linux-x86_64
           ./dist/upid-linux-x86_64 --help
+
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/upid-linux-x86_64
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-rhel:
+    runs-on: ubuntu-latest
+    container:
+      image: quay.io/centos/centos:stream9
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Python and pip
+        run: |
+          dnf install -y python3 python3-pip gcc redhat-rpm-config
+          python3 -m pip install --upgrade pip
+          pip install pyinstaller rich click requests pyyaml
+
+      - name: Build RHEL binary
+        run: |
+          pyinstaller --onefile --name upid-rhel-x86_64 upid_main.py
+
+      - name: Test RHEL binary
+        run: |
+          chmod +x ./dist/upid-rhel-x86_64
+          ./dist/upid-rhel-x86_64 --help
+
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/upid-rhel-x86_64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install pyinstaller rich click requests pyyaml
-      - run: |
+
+      - name: Build macOS binary
+        run: |
           pyinstaller --onefile --name upid-darwin-arm64 upid_main.py
-      - run: |
+
+      - name: Test macOS binary
+        run: |
           chmod +x ./dist/upid-darwin-arm64
           ./dist/upid-darwin-arm64 --help
+
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/upid-darwin-arm64
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install pyinstaller rich click requests pyyaml
-      - run: |
+
+      - name: Build Windows binary
+        run: |
           pyinstaller --onefile --name upid-windows-x86_64 upid_main.py
-      - run: |
-          ./dist/upid-windows-x86_64.exe --help
+
+      - name: Test Windows binary
+        run: |
+          .\dist\upid-windows-x86_64.exe --help
+
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/upid-windows-x86_64.exe
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
