--- a/requirements.txt
+++ b/requirements.txt
@@ -30,16 +30,38 @@ joblib>=1.3.0
 pyjwt>=2.8.0
 cryptography>=41.0.0
 ldap3>=2.9.0
+pyotp>=2.8.0
+bcrypt>=4.0.0
 
 # HTTP and API
 requests>=2.31.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
 
 # Monitoring and logging
 prometheus-client>=0.17.0
 structlog>=23.0.0
+psutil>=5.9.0
 
 # Data Processing
 xmltodict>=0.13.0
+
+# Cloud Authentication and APIs
+google-auth>=2.17.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.95.0
+google-cloud-billing>=1.11.0
+google-cloud-container>=2.30.0
+google-cloud-compute>=1.14.0
+google-cloud-bigquery>=3.11.0
+azure-identity>=1.13.0
+azure-mgmt-costmanagement>=3.0.0
+azure-mgmt-containerservice>=27.0.0
+azure-mgmt-compute>=30.0.0
+
+# Caching and storage
+redis>=4.6.0
 
 # Development and testing
 pytest>=7.4.0
@@ -47,4 +69,7 @@ pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 black>=23.0.0
 flake8>=6.0.0
-mypy>=1.5.0 
+mypy>=1.5.0
+
+# Build and packaging
+pyinstaller>=6.0.0 
