--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
       run: |
         python -m venv venv
         if [ "$RUNNER_OS" = "Windows" ]; then
-          venv\Scripts\pip.exe install --upgrade pip
-          venv\Scripts\pip.exe install -r requirements.txt
-          venv\Scripts\pip.exe install pyinstaller
+          venv/Scripts/pip.exe install --upgrade pip
+          venv/Scripts/pip.exe install -r requirements.txt
+          venv/Scripts/pip.exe install pyinstaller
         else
           source venv/bin/activate
           python -m pip install --upgrade pip
