--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,209 +1,175 @@
-name: 🚀 UPID CLI Enterprise Release
+name: Release UPID CLI
 
 on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
 
 jobs:
-  build-binaries:
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            platform: linux-amd64
-            binary_name: upid
-          - os: ubuntu-latest  
-            platform: linux-arm64
-            binary_name: upid
-          - os: macos-latest
-            platform: macos-amd64
-            binary_name: upid
-          - os: macos-latest
-            platform: macos-arm64  
-            binary_name: upid
-          - os: windows-latest
-            platform: windows-amd64
-            binary_name: upid.exe
-
-    runs-on: ${{ matrix.os }}
-    
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
         
-    - name: Create virtual environment and install dependencies
+    - name: Install dependencies
       run: |
-        python -m venv venv
-        if [ "$RUNNER_OS" = "Windows" ]; then
-          venv/Scripts/pip.exe install --upgrade pip
-          venv/Scripts/pip.exe install -r requirements.txt
-          venv/Scripts/pip.exe install pyinstaller
-        else
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pyinstaller
-        fi
-      shell: bash
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
         
-    - name: Build enterprise binary using build system
+    - name: Build Linux binary
       run: |
-        source venv/bin/activate || venv\Scripts\activate
-        python build_binary.py --clean --test --release
+        pyinstaller --onefile --name upid-linux-x86_64 upid/cli.py
+        tar -czf upid-linux-x86_64.tar.gz dist/upid-linux-x86_64 install/install.sh docs/guides/UPID_USER_MANUAL.md docs/guides/UPID_QUICK_REFERENCE.md docs/guides/UPID_INSTALLATION_GUIDE.md
         
-    - name: Prepare release assets
-      run: |
-        VERSION=${GITHUB_REF#refs/tags/v}
-        BINARY_NAME="upid-${VERSION}-${{ matrix.platform }}"
-        
-        # Rename binary to platform-specific name
-        if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          mv upid.exe "${BINARY_NAME}.exe"
-          echo "ASSET_NAME=${BINARY_NAME}.exe" >> $GITHUB_ENV
-        else
-          mv upid "${BINARY_NAME}"
-          echo "ASSET_NAME=${BINARY_NAME}" >> $GITHUB_ENV
-        fi
-        
-        # Generate checksums
-        if command -v sha256sum >/dev/null 2>&1; then
-          sha256sum "${ASSET_NAME}" > "${ASSET_NAME}.sha256"
-        elif command -v shasum >/dev/null 2>&1; then
-          shasum -a 256 "${ASSET_NAME}" > "${ASSET_NAME}.sha256"
-        fi
-      shell: bash
-        
-    - name: Upload binary artifact
+    - name: Upload Linux binary
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.ASSET_NAME }}
-        path: |
-          ${{ env.ASSET_NAME }}
-          ${{ env.ASSET_NAME }}.sha256
+        name: upid-linux-x86_64
+        path: upid-linux-x86_64.tar.gz
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
+        
+    - name: Build macOS binary
+      run: |
+        pyinstaller --onefile --name upid-darwin-arm64 upid/cli.py
+        tar -czf upid-darwin-arm64.tar.gz dist/upid-darwin-arm64 install/install.sh docs/guides/UPID_USER_MANUAL.md docs/guides/UPID_QUICK_REFERENCE.md docs/guides/UPID_INSTALLATION_GUIDE.md
+        
+    - name: Upload macOS binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: upid-darwin-arm64
+        path: upid-darwin-arm64.tar.gz
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
+        
+    - name: Build Windows binary
+      run: |
+        pyinstaller --onefile --name upid-windows-x86_64 upid/cli.py
+        Compress-Archive -Path "dist/upid-windows-x86_64.exe", "install/install.ps1", "docs/guides/UPID_USER_MANUAL.md", "docs/guides/UPID_QUICK_REFERENCE.md", "docs/guides/UPID_INSTALLATION_GUIDE.md" -DestinationPath "upid-windows-x86_64.zip"
+        
+    - name: Upload Windows binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: upid-windows-x86_64
+        path: upid-windows-x86_64.zip
 
   create-release:
-    needs: build-binaries
+    needs: [build-linux, build-macos, build-windows]
     runs-on: ubuntu-latest
     permissions:
       contents: write
       packages: write
-      
+      issues: write
+      pull-requests: write
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Download all artifacts
       uses: actions/download-artifact@v4
-      with:
-        path: artifacts
-        
-    - name: Prepare release files
-      run: |
-        mkdir -p release-assets
-        find artifacts -type f -exec cp {} release-assets/ \;
-        ls -la release-assets/
-        
-    - name: Create GitHub Release
+      
+    - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        files: release-assets/*
-        draft: false
-        prerelease: false
-        generate_release_notes: true
+        files: |
+          upid-linux-x86_64/upid-linux-x86_64.tar.gz
+          upid-darwin-arm64/upid-darwin-arm64.tar.gz
+          upid-windows-x86_64/upid-windows-x86_64.zip
         body: |
-          # 🚀 UPID CLI ${{ github.ref_name }} - Enterprise Release
+          # UPID CLI ${{ github.ref_name }} - Production Ready Release
           
-          ## ⭐ Professional Kubernetes Cost Optimizer
+          ## What's New
           
-          UPID CLI works like a professional command-line tool - clean, fast, and enterprise-ready!
+          UPID CLI ${{ github.ref_name }} represents a complete overhaul from prototype to production-ready Kubernetes intelligence platform. All mock data has been removed and replaced with real implementations.
           
-          ### 🎯 **What Makes UPID Special**
-          - **Clean command**: Just `upid` (no version clutter)
-          - **Professional installation**: Standard `/usr/local/bin/` deployment
-          - **Rich CLI experience**: Beautiful tables, colors, helpful output
-          - **Enterprise-grade**: Production-tested, error-free, comprehensive
+          ### Key Features
           
-          ### 💰 **Business Value**
-          - **Health Check Illusion solution**: 60-80% additional cost savings
-          - **Zero-pod scaling**: Safe automation with rollback guarantees
-          - **Universal compatibility**: Works with any Kubernetes distribution
-          - **Executive dashboards**: ROI metrics and business intelligence
-          - **$29,700 annual savings** per customer (conservative estimate)
+          - **🔐 Enterprise Security**: RBAC, MFA, OIDC, SAML, LDAP, Cloud IAM
+          - **🤖 ML-Powered Insights**: Real predictions and anomaly detection
+          - **📊 Business Intelligence**: KPI tracking and ROI analysis
+          - **☁️ Cloud Integration**: AWS, GCP, and Azure support
+          - **📈 Real-time Monitoring**: Live metrics and alerting
+          - **🛠️ Production Binaries**: Ready-to-use executables
           
-          ### 📦 **Installation**
+          ### Quick Start
           
-          #### macOS
           ```bash
-          # Apple Silicon (M1/M2)
-          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-${{ github.ref_name }}-macos-arm64 -o upid
-          chmod +x upid && sudo mv upid /usr/local/bin/
+          # Download and install (macOS/Linux)
+          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-darwin-arm64.tar.gz | tar -xz
+          sudo mv upid-darwin-arm64 /usr/local/bin/upid
           
-          # Intel
-          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-${{ github.ref_name }}-macos-amd64 -o upid
-          chmod +x upid && sudo mv upid /usr/local/bin/
-          ```
+          # Or for Linux
+          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-linux-x86_64.tar.gz | tar -xz
+          sudo mv upid-linux-x86_64 /usr/local/bin/upid
           
-          #### Linux
-          ```bash
-          # x86_64
-          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-${{ github.ref_name }}-linux-amd64 -o upid
-          chmod +x upid && sudo mv upid /usr/local/bin/
+          # Authenticate
+          upid auth login
           
-          # ARM64
-          curl -L https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-${{ github.ref_name }}-linux-arm64 -o upid
-          chmod +x upid && sudo mv upid /usr/local/bin/
-          ```
-          
-          #### Windows
-          ```powershell
-          Invoke-WebRequest -Uri "https://github.com/kubilitics/upid-cli/releases/download/${{ github.ref_name }}/upid-${{ github.ref_name }}-windows-amd64.exe" -OutFile "upid.exe"
-          Move-Item upid.exe "$env:USERPROFILE\bin\upid.exe"
-          ```
-          
-          ### 🚀 **Quick Start (5 minutes)**
-          ```bash
-          # Verify installation
-          upid --version
-          upid --check-prereqs
-          
-          # Analyze your cluster
+          # Analyze cluster
           upid analyze cluster
           
-          # Find idle workloads (with health check filtering)
-          upid analyze idle default --confidence 0.85
-          
-          # Safe zero-pod scaling preview  
-          upid optimize zero-pod default --dry-run
-          
-          # Generate executive cost report
-          upid report executive
+          # View dashboard
+          upid dashboard
           ```
           
-          ### 📋 **Enterprise Features**
-          - ✅ **Production-ready**: 57MB optimized binaries
-          - ✅ **Universal compatibility**: Any Kubernetes distribution
-          - ✅ **Safety first**: Read-only by default, rollback guarantees
-          - ✅ **Rich output**: Professional CLI with tables and colors
-          - ✅ **Comprehensive docs**: Installation guides and customer demos
-          - ✅ **Customer validation**: 4 comprehensive test scripts included
+          ### Downloads
           
-          ### 🎯 **Available Platforms**
-          - **macOS**: ARM64 (Apple Silicon) and AMD64 (Intel)
-          - **Linux**: AMD64 and ARM64
-          - **Windows**: AMD64
+          - **macOS ARM64**: upid-darwin-arm64.tar.gz
+          - **Linux x86_64**: upid-linux-x86_64.tar.gz
+          - **Windows x86_64**: upid-windows-x86_64.zip
+          
+          ### Documentation
+          
+          - [User Manual](docs/guides/UPID_USER_MANUAL.md)
+          - [Quick Reference](docs/guides/UPID_QUICK_REFERENCE.md)
+          - [Installation Guide](docs/guides/UPID_INSTALLATION_GUIDE.md)
+          
+          ### System Requirements
+          
+          - Kubernetes cluster access
+          - kubectl configured
+          - Python 3.8+ (for optional features)
+          - 100MB disk space
           
           ---
           
-          **🎉 UPID CLI ${{ github.ref_name }} - Enterprise-ready Kubernetes cost optimization that delivers immediate ROI!**
-          
-          📚 **Documentation**: [Customer Demo Guide](https://github.com/kubilitics/upid-cli/blob/main/CUSTOMER_DEMO_GUIDE.md) | [Installation Guide](https://github.com/kubilitics/upid-cli/blob/main/INSTALL.md)
-        
+          **Download and start using UPID CLI ${{ github.ref_name }} today!**
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
