--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Build Windows binary
       run: |
         pyinstaller --onefile --clean --noconfirm --exclude-module=tkinter --exclude-module=unittest --exclude-module=pydoc --name upid-windows-x86_64 upid/cli.py
-        zip upid-windows-x86_64.zip dist/upid-windows-x86_64.exe install/install.ps1 docs/guides/UPID_USER_MANUAL.md docs/guides/UPID_QUICK_REFERENCE.md docs/guides/UPID_INSTALLATION_GUIDE.md
+        python -c "import zipfile; z = zipfile.ZipFile('upid-windows-x86_64.zip', 'w'); z.write('dist/upid-windows-x86_64.exe'); z.write('install/install.ps1'); z.write('docs/guides/UPID_USER_MANUAL.md'); z.write('docs/guides/UPID_QUICK_REFERENCE.md'); z.write('docs/guides/UPID_INSTALLATION_GUIDE.md'); z.close()"
       shell: bash
         
     - name: Upload Windows binary
